--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
 
   }
 .body{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
+    background-color: rgb(16, 16, 15);
     padding: 30px;
     margin:30px;
     border: 2px solid;
