feat(style):main page background-color changed

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
 
   }
 .body{
-    /* background-color: antiquewhite; */
-    background-color: rgb(16, 16, 15);
+    background-color: antiquewhite;
     padding: 30px;
     margin:30px;
     border: 2px solid;
